--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "owner": "5219984907795",
+    "owner": "8122521667",
     "mods": [
-      "5219984907795", "5214447000377"
+      "jehan carlo"
      ],
     "public": true
 }
